--- a/vcastplay-cms/src/app/pages/schedules/schedule-details/schedule-details.component.html
+++ b/vcastplay-cms/src/app/pages/schedules/schedule-details/schedule-details.component.html
@@ -8,11 +8,13 @@
                     <p class="text-sm md:text-xl font-semibold">{{ isEditMode() ? 'Edit Schedule' : 'New Schedule' }}</p>
                 </div>
                 <div class="hidden md:flex ml:auto gap-2">
-                    <p-button label="Add Content" icon="pi pi-plus" (onClick)="onClickAddContent()" outlined />
+                    <!-- <p-button label="Add Content" icon="pi pi-plus" (onClick)="onClickAddContent()" outlined /> -->
+                    <p-button label="Add" icon="pi pi-plus" (onClick)="addOptions.toggle($event)" outlined />
                     <p-button icon="pi pi-save" label="Save" (onClick)="onClickSave($event)" />
                 </div>
                 <div class="flex md:hidden ml:auto gap-2">
-                    <p-button icon="pi pi-plus" (onClick)="onClickAddContent()"  outlined />
+                    <!-- <p-button icon="pi pi-plus" (onClick)="onClickAddContent()"  outlined /> -->
+                    <p-button icon="pi pi-plus" (onClick)="addOptions.toggle($event)" outlined />
                     <p-button icon="pi pi-save" (onClick)="onClickSave($event)" />
                 </div>
             </div>
@@ -26,7 +28,7 @@
                         <label for="name">Name</label>
                     </p-floatlabel>
                 </div>
-                <div class="col-span-1  md:col-span-6 lg:col-span-9">
+                <div class="col-span-1 md:col-span-6 lg:col-span-9">
                     <p-floatlabel variant="on">
                         <input id="description" pInputText formControlName="description"
                             [ngClass]="{ 'ng-invalid ng-dirty': formControl('description').invalid && formControl('description').touched }" fluid />
@@ -35,27 +37,27 @@
                 </div>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-12 gap-4 items-center">
-                <div class="col-span-1 md:col-span-6 lg:col-span-3">
-                    <p-floatlabel variant="on">
-                        <p-select inputId="calendarView" [(ngModel)]="calendarViewSignal" [options]="calendarViews()" optionLabel="label" optionValue="value" 
-                            (onChange)="onChangeCalendarView($event)" fluid />
-                        <label for="calendarView">Calendar View</label>
-                    </p-floatlabel>
+                <!-- !['dayGridMonth'].includes(calendarViewSignal()) -->
+                <div class="col-span1 md:col-span-12 lg:col-span-6 order-3 md:order-1">
+                    <div class="flex gap-3 items-center">
+                        <p-button icon="pi pi-chevron-left" size="small" pTooltip="Previous" tooltipPosition="bottom" (onClick)="onClickPreviousCalendar()" />
+                        <p-button icon="pi pi-chevron-right" size="small" pTooltip="Next" tooltipPosition="bottom" (onClick)="onClickNextCalendar()" />
+                        <p class="font-semibold text-lg">{{ calendarTitle() }}</p>
+                    </div>
                 </div>
-                <div class="col-span-1 md:col-span-6 lg:col-span-3" [ngClass]="{ 'hidden': ['dayGridMonth'].includes(calendarViewSignal()) }">
-                    <p-floatlabel variant="on">
+                <div class="col-span-1 md:col-span-6 lg:col-span-3 order-2">
+                    <p-floatlabel variant="on" [ngClass]="{ '!hidden': ['dayGridMonth'].includes(calendarViewSignal()) }">
                         <p-select inputId="timeSlot" [(ngModel)]="timeSlotSignal" [options]="timeSlots()" 
                             optionLabel="value" optionValue="value" (onChange)="onChangeTimeSlot($event)" appendTo="body" fluid />
                         <label for="timeSlot">Time Slots</label>
                     </p-floatlabel>
                 </div>
-                <div class="col-span-1 md:col-span-12 flex justify-center md:justify-end" [ngClass]="{ 'lg:col-span-6': !['dayGridMonth'].includes(calendarViewSignal()), 
-                    'lg:col-span-9': ['dayGridMonth'].includes(calendarViewSignal()) }">
-                    <div class="flex gap-3">
-                        <p-button icon="pi pi-chevron-left" size="small" pTooltip="Previous" tooltipPosition="bottom" (onClick)="onClickPreviousCalendar()" />
-                        <p class="font-semibold text-lg">{{ calendarTitle() }}</p>
-                        <p-button icon="pi pi-chevron-right" size="small" pTooltip="Next" tooltipPosition="bottom" (onClick)="onClickNextCalendar()" />
-                    </div>
+                <div class="col-span-1 md:col-span-6 lg:col-span-3 order-1 md:order-3">
+                    <p-floatlabel variant="on">
+                        <p-select inputId="calendarView" [(ngModel)]="calendarViewSignal" [options]="calendarViews()" optionLabel="label" optionValue="value" 
+                            (onChange)="onChangeCalendarView($event)" fluid />
+                        <label for="calendarView">Calendar View</label>
+                    </p-floatlabel>
                 </div>
             </div>
             <full-calendar #scheduleCalendar [options]="calendarOptions"></full-calendar>
@@ -71,6 +73,14 @@
     <ng-template #footer>
         <p-button label="Close" severity="secondary" (onClick)="onClickCancelContent()" />
         <p-button label="Save" severity="success" (onClick)="onClickSaveContent($event)" />
+    </ng-template>
+</p-dialog>
+
+<p-dialog header="Add Fillers" [(visible)]="showFillerContents" [style]="{ width: '42rem' }" [draggable]="false" (onHide)="onClickCancelContent()" closable modal>
+    <app-schedule-fillers></app-schedule-fillers>
+    <ng-template #footer>
+        <p-button label="Close" severity="secondary" (onClick)="onClickCancelContent()" />
+        <p-button label="Save" severity="success" (onClick)="onClickSaveFillers($event)" />
     </ng-template>
 </p-dialog>
 
@@ -124,6 +134,8 @@
         <p-button label="Delete" severity="danger" (onClick)="onClickDeleteContent($event)" />
     </ng-template>
 </p-dialog>
+
+<p-menu #addOptions [model]="itemMenu" [popup]="true" appendTo="body" />
 
 <p-toast />
 <p-confirmdialog />
