added screen dialog settings and vcastplay assetlinks.json

--- a/vcastplay-cms/src/app/pages/screen-management/screen-controls/screen-controls.component.html
+++ b/vcastplay-cms/src/app/pages/screen-management/screen-controls/screen-controls.component.html
@@ -40,7 +40,7 @@
                         icon="pi pi-power-off" pTooltip="Shutdown" tooltipPosition="bottom" size="small" fluid />
                     <p-button (onClick)="onClickBroadCastMessage()" 
                         icon="pi pi-megaphone" pTooltip="Broadcast Message" tooltipPosition="bottom" size="small" fluid />
-                    <p-button (onClick)="onClickAssignContents()" 
+                    <p-button (onClick)="onClickOpenSettings()" 
                         icon="pi pi-cog" pTooltip="Settings" tooltipPosition="bottom" size="small" fluid /> 
                     <!-- styleClass="!bg-cyan-700 !border-cyan-700 hover:!bg-cyan-600"  -->
                 </div>
