updated cms and player

--- a/vcastplay-cms/src/app/pages/screen-management/screen-settings/screen-settings.component.html
+++ b/vcastplay-cms/src/app/pages/screen-management/screen-settings/screen-settings.component.html
@@ -1,1 +1,52 @@
-<p>screen-settings works!</p>
+<p-fieldset legend="Configuration">
+    <form [formGroup]="screenConfigForm" class="flex flex-col gap-4">
+        <div class="flex items-center gap-2">
+            <div class="flex flex-col">
+                <p class="font-semibold">Display Status</p>
+                <p class="text-sm font-thin">Toggles the screen display status via network.</p>
+            </div>
+            <p-toggleswitch class="ml-auto" formControlName="display" />
+        </div>
+        <div class="flex items-center gap-2">
+            <div class="flex flex-col">
+                <p class="font-semibold">Audio</p>
+                <p class="text-sm font-thin">Toggles the screen audio.</p>
+            </div>
+            <p-toggleswitch class="ml-auto" formControlName="audio" />
+        </div>
+        <div class="flex items-center gap-2">
+            <div class="flex flex-col">
+                <p class="font-semibold">Always on Top</p>
+                <p class="text-sm font-thin">Displays the screen always on top.</p>
+            </div>
+            <p-toggleswitch class="ml-auto" formControlName="alwaysTop" />
+        </div>
+        <div class="flex items-center gap-2">
+            <div class="flex flex-col">
+                <p class="font-semibold">Fullscreen Mode</p>
+                <p class="text-sm font-thin">Displays the screen in fullscreen mode.</p>
+            </div>
+            <p-toggleswitch class="ml-auto" formControlName="fullscreen" />
+        </div>
+        <div class="flex items-center gap-2">
+            <div class="flex flex-col">
+                <p class="font-semibold">Sync Time With Internet</p>
+                <p class="text-sm font-thin">Syncs the screen time with the internet.</p>
+            </div>
+            <p-toggleswitch class="ml-auto" formControlName="syncTime" />
+        </div>
+        <div class="flex items-center gap-2">
+            <div class="flex flex-col">
+                <p class="font-semibold">Content Playback Logging</p>
+                <p class="text-sm font-thin">Tracks which content was played, when, and for how long.</p>
+            </div>
+            <p-toggleswitch class="ml-auto" formControlName="playbackLogging" />
+        </div>
+    </form>
+</p-fieldset>
+<p-fieldset legend="Preventive Maintenance">
+    <div class="flex items-center gap-3">
+        <p class="text-sm">Clears the screen contents and schedules for preventive maintenance reasons.</p>
+        <p-button class="ml-auto" label="Clear" />
+    </div>
+</p-fieldset>
