--- a/vcastplay-cms/src/app/pages/schedules/schedules-content-list/schedules-content-list.component.html
+++ b/vcastplay-cms/src/app/pages/schedules/schedules-content-list/schedules-content-list.component.html
@@ -1,58 +1,5 @@
 <div class="flex flex-col gap-3 pt-2 h-full">
-    <div class="flex" [formGroup]="contentItemForm">
-        <p-floatlabel class="w-full" variant="on">
-            <p-select inputId="type" [options]="contentTypes()" optionLabel="label" optionValue="value" formControlName="type" appendTo="body" fluid />
-            <label for="type">Type</label>
-        </p-floatlabel>
-    </div>
-    @switch (type?.value) {
-        @case ('asset') {
-            <app-asset-filter (filterChange)="onFilterChange($event)" />
-        }
-        @case ('playlist') {
-            <app-playlist-filter (filterChange)="onFilterChange($event)" />
-        }
-    }
-    <div class="border border-[var(--p-surface-300)] rounded-lg h-[220px]">
-        <p-table
-            #contentTable
-            [value]="filteredContentLists()"
-            [(selection)]="selectedContent"
-            (selectionChange)="onSelectionChange($event)"
-            dataKey="id"
-            [scrollable]="true" 
-            scrollHeight="220px" 
-            selectionMode="single"
-            size="small"
-            sty
-            stripedRows
-            showGridlines
-        >
-            <ng-template #header>
-                <tr>
-                    <th style="width: 3rem"></th>
-                    <th>Name</th>
-                    <th>Duration</th>
-                </tr>
-            </ng-template>
-            <ng-template #body let-item>
-                <tr [pSelectableRow]="item">
-                    <td>
-                        <div class="text-center"><p-tableRadioButton [value]="item" /></div>
-                    </td>
-                    <td><p class="line-clamp-1">{{ item.name }}</p></td>
-                    <td>{{ utils.timeConversion(item.duration) }}</td>
-                </tr>
-            </ng-template>
-            <ng-template #emptymessage>
-                <tr>
-                    <td colspan="3" [height]="20">
-                        <div class="flex justify-center p-5"><p class="italic">No Data found</p></div>
-                    </td>
-                </tr>
-            </ng-template>
-        </p-table>
-    </div>
+    <app-content-selection (contentType)="onContentTypeChange($event)" [selectionContent]="selectedContent" (selectedContents)="onSelectionChange($event)" />
 
     <p-fieldset legend="Schedule" [formGroup]="contentItemForm">
         <div class="flex flex-col gap-3">
