Added design layout

--- a/vcastplay-cms/src/app/components/users/user-approval/user-approval.component.html
+++ b/vcastplay-cms/src/app/components/users/user-approval/user-approval.component.html
@@ -1,7 +1,7 @@
-<div class="flex flex-col gap-4 mt-1" [formGroup]="playlistForm">
+<div class="flex flex-col gap-4 mt-1" [formGroup]="approvedForm">
     <div formGroupName="approvedInfo">
         <p-floatlabel variant="on">
-            <textarea pTextarea id="remarks" formControlName="remarks" rows="5" cols="30" style="resize: none" class="h-full" fluid></textarea>
+            <textarea pTextarea id="remarks" formControlName="remarks" rows="5" cols="2" style="resize: none" class="h-full" fluid></textarea>
             <label for="remarks">Remarks</label>
         </p-floatlabel>
     </div>
